--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,6 +1,6 @@
 name: UI Tests                                                     # Имя наших тестов
 
-on: workflow_dispatch                                               # триггер для запуска теста
+on: [push]                                               # триггер для запуска теста
 
 
 jobs:                                                               # сервисы
@@ -10,11 +10,11 @@ jobs:                                                               # серви
     steps:                                                          # шаги запуска
       - uses: actions/checkout@v2                                   # 1) копируем весь код на ранер
 
-      - name: Checkout (copy) gh-pages repository to GitHub runner  # Название
-        uses: actions/checkout@v2                                   #
-        with:                                                       #
-          ref: gh-pages                                             #
-          path: ./.github/gh-pages                                  #
+#      - name: Checkout (copy) gh-pages repository to GitHub runner  # Название
+#        uses: actions/checkout@v2                                   #
+#        with:                                                       #
+#          ref: gh-pages                                             #
+#          path: ./.github/gh-pages                                  #
 
       - name: Run UI-tests via docker-compose                       # Название
         env:                                                        # переменные
@@ -22,23 +22,21 @@ jobs:                                                               # серви
           PASSWORD: ${{ secrets.PASSWORD }}                         # пароль
           LOGIN_A: ${{ secrets.LOGIN_A }}                           # логин
           PASSWORD_A: ${{ secrets.PASSWORD_A }}                     # пароль
-
-
         run: |                                                      # команда
           docker-compose up --exit-code-from regression || true     
 
-      - name: Copy history from gh-pages to allure-results          #
-        run: |                                                      # команда
-          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
-          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
+#      - name: Copy history from gh-pages to allure-results          #
+#        run: |                                                      # команда
+#          sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
+#          sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
       - name: Generate Allure report                                # Генерация аллур репортов
         run: |                                                      # команда
           sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"    
 
-      - name: Update Allure history                                 #
-        run: |                                                      #
-          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
+#      - name: Update Allure history                                 #
+#        run: |                                                      #
+#          sudo cp -R allure-report/history/* ./.github/gh-pages/history/
 
       - name: Deploy to GitHub Pages                                # разворачиваем на гит
         uses: JamesIves/github-pages-deploy-action@4.1.5            #
