--- a/.github/wordflows/config.yml
+++ b/.github/wordflows/config.yml
@@ -1,50 +1,46 @@
-name: UI Tests Full                                                     # Имя наших тестов
+name: UI Tests
 
-on: workflow_dispatch                                               # триггер для запуска теста
+on: workflow_dispatch
 
+jobs:
+  ui-tests:
+    runs-on: ubuntu-latest
 
-jobs:                                                               # сервисы
-  ui-tests:                                                         # название
-    runs-on: ubuntu-latest                                          # на чем запускаться будет
+    steps:
+      - uses: actions/checkout@v2
 
-    steps:                                                          # шаги запуска
-      - uses: actions/checkout@v2                                   # 1) копируем весь код на ранер
+      - name: Checkout (copy) gh-pages repository to GitHub runner
+        uses: actions/checkout@v2
+        with:
+          ref: gh-pages
+          path: ./.github/gh-pages
 
-      - name: Checkout (copy) gh-pages repository to GitHub runner  # Название
-        uses: actions/checkout@v2                                   #
-        with:                                                       #
-          ref: gh-pages                                             #
-          path: ./.github/gh-pages                                  #
+      - name: Run UI-tests via docker-compose
+        env:
+          LOGIN: ${{ secrets.LOGIN }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          LOGIN_A: ${{ secrets.LOGIN_A }}
+          PASSWORD_A: ${{ secrets.PASSWORD_A }}
+        run: |
+          docker-compose up --exit-code-from regression || true
 
-      - name: Run UI-tests via docker-compose                       # Название
-        env:                                                        # переменные
-          LOGIN: ${{ secrets.LOGIN }}                               # логин
-          PASSWORD: ${{ secrets.PASSWORD }}                         # пароль
-          LOGIN_A: ${{ secrets.LOGIN_A }}                           # логин
-          PASSWORD_A: ${{ secrets.PASSWORD_A }}                     # пароль
-
-
-
-        run: |                                                      # команда
-          docker-compose up --exit-code-from regression || true     
-
-      - name: Copy history from gh-pages to allure-results          #
-        run: |                                                      # команда
+      - name: Copy history from gh-pages to allure-results
+        run: |
           sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
           sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
-      - name: Generate Allure report                                # Генерация аллур репортов
-        run: |                                                      # команда
-          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"    
+      - name: Generate Allure report
+        run: |
+          sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
 
-      - name: Update Allure history                                 #
-        run: |                                                      #
+      - name: Update Allure history
+        run: |
           sudo cp -R allure-report/history/* ./.github/gh-pages/history/
 
-      - name: Deploy to GitHub Pages                                # разворачиваем на гит
-        uses: JamesIves/github-pages-deploy-action@4.1.5            #
-        with:                                                       #
-          token: ${{ secrets.CI_TOKEN }}                            #
-          branch: gh-pages                                          #
-          folder: allure-report                                     #
-          clean: true                                               #
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.5
+        with:
+          token: ${{ secrets.CI_TOKEN }}
+          branch: gh-pages
+          folder: allure-report
+          clean: true
