--- a/.github/wordflows/config.yml
+++ b/.github/wordflows/config.yml
@@ -29,6 +29,11 @@ jobs:
           sudo mkdir -p allure-results/history  # Создает директорию для истории Allure
           sudo cp -R ./.github/gh-pages/history/* allure-results/history/
 
+      - name: Install kbd
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y kbd
+
       - name: Generate Allure report
         run: |
           sudo docker-compose run regression /bin/sh -c "allure generate allure-results --clean -o allure-report"
