--- a/.github/wordflows/config.yml
+++ b/.github/wordflows/config.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Install kbd
         run: |
-          sudo apt-get update
-          sudo apt-get install -y kbd
+          sudo apt update
+          sudo apt install kbd
 
       - name: Generate Allure report
         run: |
